# r2

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  sync_to_server.sh
benchs/: bench.cmake  bench_server.cc
benchs/co_bench/: client.cc
examples/: examples.cmake  pub_demo.cpp  routine_example.cc  rpc_example.cc
examples/basic_onesided_rdma/: client.cc  server.cc
examples/nmsg_pingpong/: client.cc
examples/zmq_subpub/: sub_demo.cpp
src/: allocator.hpp  allocator_master.hpp  common.hh  common.hpp  future.hpp  libroutine.hh  linked_list.hh  logging.cc  logging.hh  logging.hpp  macros.hpp  mem_block.hh  option.hh  option.hpp  random.hpp  rexecutor.cc  rexecutor.hpp  routine.h  routine.hh  routine.hpp  rpc.hpp  rpc_future.hpp  scheduler.cc  scheduler.hpp  scheduler_marocs.hpp  sshed.cc  sshed.hh  thread.hh  thread.hpp  timer.hpp
src/bmsg/: msg.hpp
src/channel/: channel.hpp
src/futures/: future.hpp  rdma_future.hpp  rpc_future.hpp
src/msg/: protocol.hpp  rc_session.hh  ud_data.hpp  ud_iter.hpp  ud_msg.cc  ud_msg.hh~  ud_msg.hpp  ud_session.hh
src/nmsg/: abs_session.hpp  msg.hpp  simple_msg.hpp
src/rdma/: async_op.hh  connect_handlers.hpp  connect_manager.hpp  rdma_handlers.hpp  single_op.hpp  sop.hh  sop.hh~
src/ring_msg/: cm.hh  manager.hh  mod.hh  proto.hh  receiver.hh  (+4 more)
tests/: CMakeLists.txt  main.cc  sample.cc  test_channel.cc  test_net_naming.cc  test_rc_session.cc  test_rm.cc  test_rpc_future.cc  test_scheduler.cc  test_srop.cc  test_ssched.cc  test_thread.cc  test_tm.cc  test_ud.hpp  test_ud_msg.cc  test_ud_session.cc  tests.cmake
(+8 files in other folders)
